--- a/registration_number.css
+++ b/registration_number.css
@@ -4,11 +4,13 @@
     --light: #fff;
     --shadow: 0 1px 5px rgba(104,104,104, 0.8);
     }
+
     h1{
-        border: 5px solid blue;
+        border: 5px solid black;
         width: 600px;
         margin: 60px auto;
        text-align: center;
+       font-family: Arial, Helvetica, sans-serif;
        
    }
    
